added axios to package.json, and set up fetch using fakestore api and axios

--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,9 +1,10 @@
-.product-card{
+/*.product-card{
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin: 30px;
 }
+*/
 
 
 .product-image{
