--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -8,6 +8,17 @@
 
 
 .product-image{
-    height: 200px;
+    
+    width: 200px;
+}
+
+.product-card {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 30px;
+}
+
+.product-card h3{
     width: 200px;
 }
