--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .App {
   text-align: center;
+  text-decoration: none;
+  background-color: #223843;
 }
 
 
