--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,7 +1,7 @@
 
 .navbar{
     height: 50px;
-    background-color:aliceblue;
+    background-color:#8AB0AB;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -9,7 +9,7 @@
 
 .navlink{
     text-decoration: none;
-    color: black;
+    color: #e3d5ca;
     font-size: 20px;
     font-weight: 800;
 }
